--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="Reavers" basedir="." default="main">
+<project name="Space Invaders" basedir="." default="main">
     
     <property name="lib.dir" value="lib"/>
     <property name="build.dir" value="build"/>
@@ -6,7 +6,7 @@
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir" value="${build.dir}/jar"/>
     
-    <property name="main-class"  value="CesarParent.Reavers"/>
+    <property name="main-class" value="CesarParent.SpaceInvaders"/>
     
     <path id="classpath">
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
@@ -18,7 +18,6 @@
 
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
-		<javac srcdir="${src.dir}/engine" destdir="${classes.dir}" classpathref="classpath" includeantruntime="false"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" includeantruntime="false"/>
     </target>
 
@@ -31,14 +30,25 @@
             <zipgroupfileset dir="${lib.dir}" includes="**/*.jar" />
 			<fileset dir="resources">
 				<include name="**/*.png" />
-				<include name="**/*.png" />
+				<include name="**/*.cfg" />
 			</fileset>
 			
         </jar>
     </target>
-
+	
     <target name="run" depends="jar">
         <java fork="true" classname="${main-class}">
+            <classpath>
+                <path refid="classpath"/>
+                <path location="${jar.dir}/${ant.project.name}.jar"/>
+            </classpath>
+        </java>
+    </target>
+
+    <target name="debug" depends="jar">
+        <java fork="true" classname="${main-class}">
+			<jvmarg value="-Xdebug"/>
+			<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,address=6000"/>
             <classpath>
                 <path refid="classpath"/>
                 <path location="${jar.dir}/${ant.project.name}.jar"/>
@@ -48,6 +58,6 @@
     
     <target name="clean-build" depends="clean,jar"/>
     
-    <target name="main" depends="clean,run"/>
+    <target name="main" depends="run"/>
     
 </project>
