--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="Space Invaders" basedir="." default="main">
+<project name="SpaceInvaders" basedir="." default="main">
     
     <property name="lib.dir" value="lib"/>
     <property name="build.dir" value="build"/>
@@ -31,6 +31,8 @@
 			<fileset dir="resources">
 				<include name="**/*.png" />
 				<include name="**/*.cfg" />
+				<include name="**/*.wav" />
+				<include name="**/*.ttf" />
 			</fileset>
 			
         </jar>
